--- a/popup.html
+++ b/popup.html
@@ -49,11 +49,11 @@
         <h3 class="menu-heading red-text text-darken-3">Subtitle Options:</h3>
         <div class="collection">
           <a
-          id="subtitle-settings"
-          href="#!"
-          class="collection-item menu black-text tooltipped"
-          data-position="top"
-          data-tooltip="You can also open the subtitle settings from inside the video"
+            id="subtitle-settings"
+            href="#!"
+            class="collection-item menu black-text tooltipped"
+            data-position="top"
+            data-tooltip="Hint: Feel free to open the subtitle options from inside the video by clicking on the icon in the top left corner."
           ><span class="badge"><i class="material-icons">subtitles</i></span
           >Subtitles</a
           >
@@ -62,7 +62,7 @@
             href="#!"
             class="collection-item menu black-text tooltipped"
             data-position="top"
-            data-tooltip="You can also open the subtitle settings from inside the video"
+            data-tooltip="Hint: Feel free to open the display settings from inside the video by clicking on the icon in the top left corner."
             ><span class="badge"><i class="material-icons">computer</i></span
             >Display</a
           >
@@ -71,7 +71,7 @@
             href="#!"
             class="collection-item menu black-text tooltipped"
             data-position="top"
-            data-tooltip="You can also open the subtitle settings from inside the video"
+            data-tooltip="Hint: Feel free to open the synchronization tool from inside the video by clicking on the icon in the top left corner."
             ><span class="badge"><i class="material-icons">sync</i></span
             >Synchronization</a
           >
