--- a/popup.html
+++ b/popup.html
@@ -31,95 +31,23 @@
         >&#xf011;</i
       >
     </div>
-    <div id="settings" class="hide">
-      <div id="subtitle-section" class="hide">
-        <h3 class="menu-heading">Subtitle Options:</h3>
-        <div class="collection">
-          <a
-            id="subtitle-settings"
-            href="#!"
-            class="collection-item menu"
-            name="subtitles"
-          >
-            <span class="badge">
-              <i class="material-icons">subtitles</i>
-            </span>
-            Subtitles
-          </a>
-          <a
-            id="display-settings"
-            href="#!"
-            name="display"
-            class="collection-item menu"
-          >
-            <span class="badge">
-              <i class="material-icons">computer</i>
-            </span>
-            Display
-          </a>
-          <a
-            id="sync-settings"
-            href="#!"
-            name="sync"
-            class="collection-item menu"
-          >
-            <span class="badge">
-              <i class="material-icons">sync</i>
-            </span>
-            Synchronization
-          </a>
-        </div>
-      </div>
-      <div id="disabled-subtitle-section">
-        <h3 class="menu-heading">Subtitle Options:</h3>
-        <div class="collection">
-          <a
-            href="#!"
-            class="collection-item menu tooltipped no-video-detected"
-            data-position="top"
-            data-tooltip="No video detected on this site!"
-            ><span class="badge"><i class="material-icons">subtitles</i></span
-            >Subtitles</a
-          >
-          <a
-            href="#!"
-            class="collection-item menu tooltipped no-video-detected"
-            data-position="top"
-            data-tooltip="No video detected on this site!"
-            ><span class="badge"><i class="material-icons">computer</i></span
-            >Display</a
-          >
-          <a
-            href="#!"
-            class="collection-item menu tooltipped no-video-detected"
-            data-position="top"
-            data-tooltip="No video detected on this site!"
-            ><span class="badge"><i class="material-icons">sync</i></span
-            >Synchronization</a
-          >
-        </div>
-      </div>
-      <div id="general-section">
-        <h3 class="menu-heading" style="margin-top: 30px">General:</h3>
-        <div class="collection">
-          <a href="#!" class="collection-item menu" id="shortcuts"
-            ><span class="badge"><i class="material-icons">keyboard</i></span
-            >Shortcuts</a
-          >
-          <a href="#!" class="collection-item menu"
-            ><span class="badge"><i class="material-icons">list</i></span
-            >Blacklist</a
-          >
-          <a href="#!" class="collection-item menu"
-            ><span class="badge"><i class="material-icons">feedback</i></span
-            >Feedback</a
-          >
-          <a href="#!" class="collection-item menu"
-            ><span class="badge"><i class="material-icons">group</i></span
-            >About</a
-          >
-        </div>
-      </div>
+    <div id="settings" class="collection hide">
+      <a href="#!" class="collection-item menu" id="shortcuts"
+        ><span class="badge"><i class="material-icons">keyboard</i></span
+        >Shortcuts</a
+      >
+      <a href="#!" class="collection-item menu"
+        ><span class="badge"><i class="material-icons">list</i></span
+        >Blacklist</a
+      >
+      <a href="#!" class="collection-item menu"
+        ><span class="badge"><i class="material-icons">feedback</i></span
+        >Feedback</a
+      >
+      <a href="#!" class="collection-item menu"
+        ><span class="badge"><i class="material-icons">group</i></span
+        >About</a
+      >
     </div>
     <script
       type="text/javascript"
