Creating the blacklist feature

--- a/popup.html
+++ b/popup.html
@@ -37,10 +37,20 @@
         ><span class="badge"><i class="material-icons">keyboard</i></span
         >Shortcuts</a
       >
-      <a href="#!" class="collection-item menu"
-        ><span class="badge"><i class="material-icons">list</i></span
-        >Blacklist</a
-      >
+      <a
+        href="#!"
+        id="blacklist-tooltip"
+        class="collection-item menu tooltipped"
+        data-position="top"
+        data-tooltip="Turn Extension On/Off"
+        ><span class="badge">
+          <div class="switch">
+            <label>
+              <input id="blacklist-switch" type="checkbox" />
+              <span class="lever"></span>
+            </label></div></span
+        >Blacklist
+      </a>
       <a href="#!" class="collection-item menu"
         ><span class="badge"><i class="material-icons">feedback</i></span
         >Feedback</a
