Blacklist tooltip fix and making it so that the alert doesn't close the popup when it's canceled and the page is not reloaded

--- a/popup.html
+++ b/popup.html
@@ -37,14 +37,13 @@
         ><span class="badge"><i class="material-icons">keyboard</i></span
         >Shortcuts</a
       >
-      <a
-        href="#!"
-        id="blacklist-tooltip"
-        class="collection-item menu tooltipped"
-        data-position="top"
-        data-tooltip="Turn Extension On/Off"
+      <a href="#!" class="collection-item menu"
         ><span class="badge">
-          <div class="switch">
+          <div
+            id="blacklist-tooltip"
+            class="switch tooltipped"
+            data-position="top"
+          >
             <label>
               <input id="blacklist-switch" type="checkbox" />
               <span class="lever"></span>
