Pushing all changes to GitHub before overwriting my curent operating system with Kubuntu

--- a/background.html
+++ b/background.html
@@ -2,4 +2,4 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
 <script src="firebase.js"></script>
 <script src="config.js"></script>
-<script src="bundle.js"></script>
+<script src="background.js"></script>
