Deleting the blacklist feature

--- a/popup.html
+++ b/popup.html
@@ -37,20 +37,7 @@
         ><span class="badge"><i class="material-icons">keyboard</i></span
         >Shortcuts</a
       >
-      <a href="#!" class="collection-item menu"
-        ><span class="badge">
-          <div
-            id="blacklist-tooltip"
-            class="switch tooltipped"
-            data-position="top"
-          >
-            <label>
-              <input id="blacklist-switch" type="checkbox" />
-              <span class="lever"></span>
-            </label></div></span
-        >Blacklist
-      </a>
-      <a href="#!" class="collection-item menu"
+      <a href="#!" class="collection-item menu" id="feedback-link"
         ><span class="badge"><i class="material-icons">feedback</i></span
         >Feedback</a
       >
