Added shortcuts to move subtitles up or down. This is an important feature when the drag feature stops working like it does on Amazon for example

--- a/popup.html
+++ b/popup.html
@@ -75,6 +75,16 @@
       </div>
       <hr />
       <div class="shortcut">
+        <div class="label">Move subtitles up</div>
+        <input name="moveUp" type="text" class="browser-default" />
+      </div>
+      <hr />
+      <div class="shortcut">
+        <div class="label">Move subtitles down</div>
+        <input name="moveDown" type="text" class="browser-default" />
+      </div>
+      <hr />
+      <div class="shortcut">
         <div class="label">Relocate subtitles</div>
         <input name="relocate" type="text" class="browser-default" />
       </div>
