--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div id="settings">
-      <div id="subtitle-section">
+      <div id="subtitle-section" class="hide">
         <h3 class="menu-heading red-text text-darken-3">Subtitles:</h3>
         <div class="collection">
           <a
@@ -69,7 +69,7 @@
               ><i class="material-icons pointer-cursor" id="opacity-plus"
                 >add_circle</i
               ></span
-            >Transparency</a
+            >Background</a
           >
         </div>
         <h3
