Synchronisation from the popup now fully integrated and working

--- a/popup.html
+++ b/popup.html
@@ -127,6 +127,7 @@
           <a href="#!" class="collection-item black-text default-cursor">
             <div class="flex-container">
               <button
+                id="sync-now"
                 class="btn waves-effect waves-light"
                 type="submit"
                 name="action"
